1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: use GlobURL.
	* FileAccess.cc: (GetFileURL) handle file starting with '~';
	  (GlobURL::GetResult) implemented.
	* FileAccess.h: few methods for GlobURL added.
	* FtpGlob.cc: handle updir errors; handle dir starting with '~'.
	* GetJob.cc, GetJob.h: (NoProtoSrc, NoProtoDst) new methods;
	  handle reverse transfers (put).
	* LocalAccess.cc, LocalAccess.h: preserve home by ignoring Connect();
	  support ascii transfers.
	* Makefile.am: remove mputJob.cc, mputJob.h, PutJob.cc, PutJob.h,
	  FileXfer.cc, FileXfer.h.
	* MirrorJob.cc: don't include PutJob.h.
	* commands.cc: don't include PutJob.h, mputJob.h; move put, mput, mget
	  functionality to cmd_get; update help; use GlobURL;
	  support `login URL'.
	* mgetJob.cc, mgetJob.h: support mput.
	* url.h: (is_url) new method.
	* complete.cc: use GlobURL.
	* FileCopy.cc: don't open session if seek_pos>=size.

1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: help update; support get -a for ascii mode;
	  don't use ascii mode for zcat and zmore.
	* CopyJob.cc, CopyJob.h: ascii support in CopyJobEnv; add SetDate and
	  SetSize methods.
	* FileCopy.cc, FileCopy.h: init can_seek0; add FileCopyPeerFA::NewGet,
	  NewPut methods.
	* MirrorJob.cc: use CopyJob.
	* commands.cc: use NewPut.
	* url.cc: allocate enough memory for file: urls.

1999-12-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* CatJob.cc, ChangeLog, CopyJob.cc, CopyJob.h, FileAccess.cc,
	  FileAccess.h, FileCopy.cc, FileCopy.h, Filter.cc, Filter.h,
	  GetJob.cc, GetJob.h, MirrorJob.cc, commands.cc, mgetJob.cc,
	  mgetJob.h, pgetJob.cc, pgetJob.h: lots of changes - get, mget, pget
	  now work with new FileCopyEnv class.

1999-12-24  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: support ascii conversion.
	* commands.cc: ignore -u for compatibility.
	* CmdExec.cc: beware of stale pointers, use job number instead.
