@@ -1,3 +1,13 @@
+1999-12-27  Alexander V. Lukyanov  <lav@yars.free.net>
+
+	* CopyJob.cc, CopyJob.h: add op member for CopyJob.
+	* FileCopy.cc: add ls caching support; (FileCopyPeerDirList) new class.
+	* Makefile.am: remove LsJob.cc, LsJob.h, ftpget.
+	* MirrorJob.cc: supply op for CopyJob.
+	* buffer.cc, buffer.h: (SaveRollback) new method; define GET_BUFSIZE.
+	* commands.cc: new ls, nlist; supply op for CopyJob.
+	* pgetJob.cc: supply op for CopyJob.
+
 1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>
 
 	* CmdExec.cc, CmdExec.h: use GlobURL.
